--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.21.1",
 		"concurrently": "^6.0.0",
+		"normalize-url": "^5.3.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-loader-spinner": "^4.0.0",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
